--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,9 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: var(--bg-color);
   transition:
     background-color 0.5s ease,
@@ -52,4 +55,10 @@ nav > button {
 
 button:hover {
   background-color: var(--hover-color);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
 }
